--- a/style.css
+++ b/style.css
@@ -93,7 +93,15 @@ input[type="number"]::-webkit-outer-spin-button {
   max-width: 1240px;
 }
 
-header {
+footer {
   max-width: 1240px;
   margin: auto;
+
+  display: flex;
+  align-items: baseline;
+  gap: 15px;
+}
+
+#getAddressesButton {
+  margin-left: auto;
 }
